--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -14,23 +14,37 @@
 */
 
 .tile {
+  float: left;
   position: relative;
   color: $color-base-txt;
-  width: 48%; /* Show 2 tiles by default */
-  @include font-size($font-size-sml);
-  @include to-rem(margin-bottom, $spacing-half);
+  /* Show 2 tiles by default */
+  width: 42%;
+  @include font-size($font-size-sml, 1.5);
+  @include to-rem(margin-bottom margin-left, $spacing-half);
+
+  /* When Isotope plugin has kicked in */
+  &.isotope-item {
+    float: none;
+    margin-left: 0;
+
+    /* Show 2 tiles by default */
+    @include respond-max($palm) {
+      width: 48%;
+    }
+  }
 
   /* Needed so the social share controls can be seen */
   &:hover {z-index: 2;}
 
   /* Show 3 tiles at this breakpoint */
-  @include respond-min($lap) {
+  @include respond-min($non-palm) {
     width: 31%;
   }
 
-  /* Show 5 tiles at this breakpoint */
+  /* Show 5 tiles and increase gutter at this breakpoint */
   @include respond-min($lap-lrg) {
     width: 18%;
+    @include to-rem(margin-left, $spacing-base);
   }
 
   /* Global styles */
@@ -79,8 +93,6 @@
   /* Header */
   .tile__meta__hdr {
     font-weight: bold;
-    overflow: hidden;
-    text-overflow: ellipsis;
     @include font-size($font-size-milli, 1.5);
 
     /* Increase the font size at this breakpoint */
@@ -96,7 +108,7 @@
 
     /* Increse font size at this breakpoint */
     @include respond-min($desk) {
-      @include font-size($font-size-milli, 1);
+      @include font-size($font-size-milli, 1.5);
     }
 
   }
@@ -127,7 +139,7 @@
       @include to-rem(width, $spacing-base* 2);
       @include to-rem(height, $spacing-base* 2);
       border: 1px solid rgba(#000, 0.15);
-      border-radius: 3px;
+      border-radius: $border-radius;
       background-color: #fff;
     }
 
@@ -143,7 +155,6 @@
 
 /* Deals */
 .tile--deals {
-  position: relative;
 
   .tile__meta {
     @include to-rem(padding, 45 15);
@@ -154,18 +165,18 @@
     }
   }
 
-  .tile__meta__desc {
-    color: $color-dark-txt;
-    text-transform: uppercase;
-    @include font-size($font-size-sml);
-    @include to-rem(margin-top, 7);
+    .tile__meta__desc {
+      font-family: $font-family-opensans;
+      color: $color-dark-txt;
+      text-transform: uppercase;
+      @include font-size($font-size-sml, 1.5);
+      @include to-rem(margin-bottom, $spacing-quarter);
 
-    /* Increase the font size and margin at this breakpoint to keep the proportions right */
-    @include respond-min($non-palm) {
-      @include font-size($font-size-lrg);
-      @include to-rem(margin-top, 15);
+      /* Increase the font size at this breakpoint */
+      @include respond-min($non-palm) {
+        @include font-size($font-size-lrg, 1.5);
+      }
     }
-  }
 
   .tile__meta__icon {
     top: auto;
@@ -207,7 +218,8 @@
 
     /* Tile */
     .tile {
-      margin-bottom: 0;
-      width: 100%;
+      margin: 0;
+      width: auto;
+      float: none;
     }
   }
