--- a/app/views/styleguides/abstractions.html.erb
+++ b/app/views/styleguides/abstractions.html.erb
@@ -2,7 +2,7 @@
 <div class="sg-note">An abstraction is a CSS methodology that basically removes a pattern from a specific idea and makes a more generic idea out of it e.g. make a list render horizontally. They exist to avoid writing the same similar patterns over and over, instead create a single more generic representation of those patterns and reuse that instead.</div>
 
 
-<%= styleguide_block '3.1' do %>
+<%= styleguide_block 'horizontal list' do %>
   <ul class="horiz-list $modifier_class">
       <li><a href="#">Semper</a></li><!--
     --><li><a href="#">Virtute</a></li><!--
