--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -2,16 +2,17 @@
    @ABSTRACTIONS - > HORIZONTAL LIST
    ====================================================================================== */
 
-/*
-	Usage:
-		Make list items for `ul` and `ol` elements render horizontally.
 
-	Demo:
-		Style Guide -> Abstractions -> Horizontal List
+// Make list items for `ul` and `ol` elements render horizontally.
+//
+// .horiz-list--dividers          - With dividers.
+// .horiz-list--center            - Center align.
+// .horiz-list--fit               - Force the items to occupy 100% of the available width of its parent.
+// .horiz-list--comma             - Comma separated.
+// .horiz-list--slash             - Slash separated.
+//
+// Styleguide horizontal list
 
-	Credit:
-		https://github.com/csswizardry/inuit.css/blob/master/inuit.css/objects/_nav.scss
-*/
 
 .horiz-list {
 
