Update vertical alignment doc

--- a/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
+++ b/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Vertically align an element within it's parent via CSS `display: table`.
+  Vertically align an element within it's parent via CSS `display: table`.
 
-  Demo:
-    Style Guide -> Abstractions -> Vertical Alignment
+  Styleguide vertical alignment
 */
 
 .vert-align {
