--- a/app/views/styleguides/abstractions.html.erb
+++ b/app/views/styleguides/abstractions.html.erb
@@ -13,16 +13,15 @@
 <% end %>
 
 <!-- Vertical Alignment -->
-<div class="sg-h2">Vertical Alignment</div>
-<div class="sg-note">Vertically align an element within it's parent via CSS <code class="sg-code">display: table;</code>.</div>
-
-<div style="height: 400px">
-  <div class="vert-align">
-    <div class="vert-align__inner sg-demo-boxed">
-      <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
-    </div>
+<%= styleguide_block 'vertical alignment' do %>
+  <div style="height: 400px">
+      <div class="vert-align">
+        <div class="vert-align__inner sg-demo-boxed">
+          <p>Nec at quodsi elaboraret definitionem. Ne facilisi pericula honestatis qui. In sanctus platonem voluptatum ius. Ad sed labores inermis disputando, etiam adversarium quo te. Eu vis nostrud deseruisse, est possit iracundia no, has an ferri meliore nusquam. Semper apeirian pericula eos id. Error graeci graecis sed no, quo ex hinc justo pertinax. Pro nostro placerat ex, id tamquam sadipscing vim, te tota errem audiam duo. Vim scripta recusabo elaboraret eu, sea periculis iracundia repudiandae ea, has duis modus persequeris in.</p>
+        </div>
+      </div>
   </div>
-</div>
+<% end %>
 <!-- //Vertical Alignment -->
 
 <!-- Preserve Aspect Ratio -->
