Update preserve aspect ratio doc

--- a/app/views/styleguides/abstractions.html.erb
+++ b/app/views/styleguides/abstractions.html.erb
@@ -25,12 +25,11 @@
 <!-- //Vertical Alignment -->
 
 <!-- Preserve Aspect Ratio -->
-<div class="sg-h2">Preserve Aspect Ratio</div>
-<div class="sg-note">To preserve the aspect ratio (16:9) of an element usually a video delivered via an <code class="sg-code">iframe</code>.</div>
-
+<%= styleguide_block 'preserve aspect ratio' do %>
 <div class="preserve-aspect-ratio">
   <iframe class="preserve-aspect-ratio__inner" width="560" height="315" src="http://www.youtube.com/embed/8KdtgoSCXpU?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
+<% end %>
 <!-- //Preserve Aspect Ratio -->
 
 <!-- Block List -->
