--- a/app/assets/stylesheets/partials/abstractions/_preserve-aspect-ratio.scss
+++ b/app/assets/stylesheets/partials/abstractions/_preserve-aspect-ratio.scss
@@ -3,14 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		To preserve the aspect ratio (16:9) of an element usually a video delivered via an `iframe`.
+  To preserve the aspect ratio (16:9) of an element usually a video delivered via an `iframe`.
 
-	Demo:
-		Style Guide -> Abstractions -> Preserve Aspect Ratio
-
-	Credit:
-		http://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
+  Styleguide preserve aspect ratio
 */
 
 .preserve-aspect-ratio {
