Put back in credit for preserve aspect ratio

--- a/app/assets/stylesheets/partials/abstractions/_preserve-aspect-ratio.scss
+++ b/app/assets/stylesheets/partials/abstractions/_preserve-aspect-ratio.scss
@@ -4,9 +4,13 @@
 
 /*
   To preserve the aspect ratio (16:9) of an element usually a video delivered via an `iframe`.
+  
+  Credit:
+		http://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
 
   Styleguide preserve aspect ratio
 */
+
 
 .preserve-aspect-ratio {
 	position: relative;
