Update section names and def list doc

--- a/app/assets/stylesheets/partials/abstractions/_definition-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_definition-list.scss
@@ -3,11 +3,9 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Make the `dt` and `dd` elements of a definition list render side-by-side.
-
-	Demo:
-		Style Guide -> Abstractions -> Definition List
+	Make the `dt` and `dd` elements of a definition list render side-by-side.
+	
+	Styleguide Definition List
 */
 
 /* Definiton title */
