--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -11,7 +11,7 @@
   .horiz-list--comma             - Comma separated.
   .horiz-list--slash             - Slash separated.
 
-  Styleguide horizontal list
+  Styleguide Horizontal List
 */
 
 
