--- a/app/assets/stylesheets/partials/abstractions/_preserve-aspect-ratio.scss
+++ b/app/assets/stylesheets/partials/abstractions/_preserve-aspect-ratio.scss
@@ -4,13 +4,14 @@
 
 /*
   To preserve the aspect ratio (16:9) of an element usually a video delivered via an `iframe`.
-  
-  Credit:
-		http://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
 
-  Styleguide preserve aspect ratio
+  Styleguide Preserve Aspect Ratio
 */
 
+/*
+  Credit:
+		http://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
+*/
 
 .preserve-aspect-ratio {
 	position: relative;
