--- a/app/assets/stylesheets/partials/abstractions/_split.scss
+++ b/app/assets/stylesheets/partials/abstractions/_split.scss
@@ -3,12 +3,12 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		Simple split item for creating two elements floated away from one another.
+	Simple split item for creating two elements floated away from one another.
 
-	Demo:
-		Style Guide -> Abstractions -> Split
+	Styleguide Split
+*/
 
+/*
 	Credit:
 		https://github.com/csswizardry/inuit.css/blob/master/inuit.css/objects/_split.scss
 */
