--- a/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
+++ b/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
@@ -5,7 +5,7 @@
 /*
   Vertically align an element within it's parent via CSS `display: table`.
 
-  Styleguide vertical alignment
+  Styleguide Vertical Alignment
 */
 
 .vert-align {
