--- a/app/assets/stylesheets/partials/abstractions/_block-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_block-list.scss
@@ -3,35 +3,30 @@
    ====================================================================================== */
 
 /*
-	Usage: 
-		Create big blocky lists of content.
-	
-	Demo:
-		Style Guide -> Abstractions -> Block List
-	
-	Credit: 
-		https://github.com/csswizardry/inuit.css/blob/master/inuit.css/partials/objects/_list-block.scss
+  Create big blocky lists of content.
+  
+  Styleguide Block List
 */
 
 /* Shared */
 .block-list {
-	&,
-	> li {border: 0 solid $color-grey-lighter;}
+  &,
+  > li {border: 0 solid $color-grey-lighter;}
 }
 
 .block-list {
-	border-top-width: 1px;
-	
-	/* List items */
-	> li {
-		border-bottom-width: 1px;
-		padding: to-em($spacing-half);
-	}
+  border-top-width: 1px;
+  
+  /* List items */
+  > li {
+    border-bottom-width: 1px;
+    padding: to-em($spacing-half);
+  }
 }
-	
-	/* Links */
-	.block-list__link {
-		display: block;
-		padding: to-em($spacing-half);
-		margin: -(to-em($spacing-half));
-	}
+  
+  /* Links */
+  .block-list__link {
+    display: block;
+    padding: to-em($spacing-half);
+    margin: -(to-em($spacing-half));
+  }
