--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -197,6 +197,7 @@
   <%# //Contain 'back to listing link' and 'store details' %>
 
   <%# Map %>
+  <%# FIXME: [BACKEND] map not rendering %>
   <div class="stores-maps__map map-micello js-stores-maps-toggle-map" id="stores-maps-toggle-map">
     <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true, load_immediately: false} %>
   </div>
