--- a/app/views/shared/_micello_map_popup.html.erb
+++ b/app/views/shared/_micello_map_popup.html.erb
@@ -13,6 +13,6 @@
   </div>
   <a href="#{store.url}" class="map-micello__overlay__cta btn btn--full btn--main"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</a>
   <%# FIXME: [BACKEND] need to use this button version when we're on 'stores show' for the relevant store, all other store popup's will use the link above %>
-  <!-- <button class="map-micello__overlay__cta btn btn--full btn--main btn--main-alt"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</button> -->
+  <!-- <button class="map-micello__overlay__cta btn btn--full btn--main btn--main-alt" aria-owns="stores-maps-toggle-listing-detail, stores-maps-toggle-map"><span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Store details</button> -->
 </div>
 <span class="map-micello__overlay__close icon icon--close-sml icon--xlrg icon--flush-top" aria-hidden="true"></span>
