--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -1,5 +1,5 @@
 <div class="header__overlay header__overlay--toggle js-search-toggle" id="search-mini">
-  <div class="container" ng-controller='GlobalSearchCtrl'>
+  <div class="container" ng-controller='GlobalSearchCtrl' ng-cloak>
 
     <%# Search form %>
     <%= form_tag centre_products_path(centre_id: params[:centre_id] || params[:id]),
@@ -11,7 +11,7 @@
         ng-model='searchQuery'
         name="search_query" autocomplete="off"
         placeholder="Search stores, products, deals &amp; events&#8230;">
-      <input type='submit' value='Search Products' ng-cloak ng-hide='true'>
+      <input type='submit' value='Search Products' ng-hide='true'>
     <% end %>
     <%# //Search form %>
 
@@ -23,7 +23,7 @@
     <%# //Close search %>
 
     <%# Search results %>
-    <div class='global-search-results box' ng-cloak ng-show='suggestions.length > 0'>
+    <div class='global-search-results box' ng-show='suggestions.length > 0'>
       <div class='island'>
         <p>Are you looking for</p>
         <div class='results__products'>
